<resources>
    <!--> Register and Log in Strings  </!-->
    <string name="app_name">StjcPortal</string>
    <string name="registertitle">REGISTER</string>
    <string name="registerButton">Register</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_inButton">Login</string>
    <string name="titlelog_in">LOG IN</string>
    <string name="Email">Email</string>
    <string name="user_name">User name</string>

    <!--> Menu Strings (Home)  </!-->
    <string name="account">Account</string>
    <string name="map">Map</string>
    <string name="calendar">Calendar</string>
    <string name="cousrses">Courses</string>
    <string name="media">Media</string>
    <string name="news">News</string>
    <string name="events">Events</string>
    <string name="AboutStj">St.Joseph</string>
    <string name="sports">Sports</string>

    <!--> Menu Strings (Student Account)  </!-->
    <string name="results">Results</string>
    <string name="admission">Admission</string>
    <string name="clearance">Clearance</string>
    <string name="library">Library</string>
    <string name="projects">Projects</string>
    <string name="iptr">IPTR</string>
    <string name="nhif">NHIF</string>
    <string name="announcements">Announcements</string>
    <string name="title_activity_courses">Courses</string>

    <!--> Student Account setting strings  </!-->
    <string name="title_Account_Settings">STUDENTS DETAILS</string>
    <string name="title_Account_Settings2">Details filled above should be same as college details</string>
    <string name="title_Account_Settings3">Full name</string>
    <string name="title_Account_Settings4">Admission Number</string>
    <string name="title_Account_Settings5">Department</string>
    <string name="title_Account_Settings6">Gender</string>
    <string name="title_Account_Settings7">Date of birth</string>
    <string name="title_Account_Settings8">Mobile number</string>
    <string name="title_Account_SettingsButton">Submite</string>


    <!-->Courses Menu </!-->
    <string name="todo">TODO</string>
    <string name="Title">Courses Provided </string>
    <string name="tab_text_1">Degree</string>
    <string name="tab_text_2">Diploma</string>
    <string name="tab_text_3">Short courses</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="action_acount_text">My Account</string>
    <string name="action_Logout_text">Log out</string>
    <string name="action_search_txt">search</string>

</resources>
