<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="280dp"
    android:layout_height="350dp"
    android:background="@drawable/loginbackground"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView100"
            style="@style/termsandservices"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/titlelog_in"
            android:textAlignment="center"
            android:textStyle="bold" />

        <!--        <view
            android:layout_width="200dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:background="@color/White" />
/!-->

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editText118"
                style="@style/textfield"
                android:layout_gravity="center_horizontal"
                android:drawableStart="@drawable/usernamev"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:paddingRight="30dp"
                android:textAppearance="@style/TextAppearance.AppCompat" />


                <EditText
                    android:id="@+id/editText117"
                    style="@style/textfield"
                    android:layout_gravity="center_horizontal"
                    android:drawableEnd="@drawable/showpassword"
                    android:drawableStart="@drawable/passwordv"
                    android:layout_marginTop="10dp"
                    android:fontFamily="Roboto"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textAlignment="center" />
            <Button
                android:id="@+id/button117"
                style="@style/buttonn"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:elevation="5dp"
                android:focusable="true"
                android:text="@string/log_inButton"
                android:textSize="18sp" />

            <TextView
                android:onClick="showPopup2"
                android:id="@+id/textView9"
                style="@style/termsandservices"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register" />

            <!--
            <view
                android:layout_height="2dp"
                android:layout_width="200dp"
                android:background="@color/White"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                >
!-->


            <TextView
                android:id="@+id/textView10"
                style="@style/termsandservices"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/terms_and_conditions" />


        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>