<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LoginBlue"
    tools:context="com.example.frinclina.stjcportal.Main2Activity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintHorizontal_bias="0.0">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="342dp"
        android:layout_height="328dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/LoginBlue"
            android:orientation="horizontal"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="110dp"
                android:layout_marginRight="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/resultsv" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/results"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="110dp"
                android:layout_marginRight="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/admissionv" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/admission"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="110dp"
                android:layout_marginRight="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/clearancev" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/clearance"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear1"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@color/LoginBlue"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="195dp">

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="110dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/librarryv" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/library"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="110dp"
                android:layout_marginTop="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/projectsv" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/projects"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="114dp"
                android:layout_height="110dp"
                android:layout_marginLeft="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/iptrv" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/iptr"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Linear2"
            android:layout_width="344dp"
            android:layout_height="110dp"
            android:background="@color/LoginBlue"
            android:orientation="horizontal"
            android:visibility="visible"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="48dp">

            <LinearLayout
                android:layout_width="173dp"
                android:layout_height="110dp"
                android:layout_marginRight="1dp"
                android:layout_marginTop="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/nhifv" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/nhif"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="171dp"
                android:layout_height="110dp"
                android:layout_marginTop="1dp"
                android:background="@color/MainmenuBlue"
                android:clickable="true"
                android:orientation="vertical"
                android:visibility="visible">

                <ImageButton
                    android:id="@+id/imageButton9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="@color/MainmenuBlue"
                    android:src="@drawable/announcementsv" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:fontFamily="Roboto"
                    android:text="@string/announcements"
                    android:textColor="@color/Fontcolor"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
